--- a/BoxOfficeApp/BoxOfficeApp.csproj
+++ b/BoxOfficeApp/BoxOfficeApp.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Models\Movie.cs" />
+    <Compile Include="Data\Models\StaticContent.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -87,8 +88,11 @@
     <Compile Include="GridView.aspx.designer.cs">
       <DependentUpon>GridView.aspx</DependentUpon>
     </Compile>
-    <Compile Include="FirstPageMovieImage.ashx.cs">
+    <Compile Include="Handlers\FirstPageMovieImage.ashx.cs">
       <DependentUpon>FirstPageMovieImage.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Handlers\StaticImageHandler.ashx.cs">
+      <DependentUpon>StaticImageHandler.ashx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FirstPage.aspx.cs">
@@ -100,7 +104,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="FirstPageMovieImage.ashx" />
+    <Content Include="Handlers\FirstPageMovieImage.ashx" />
+    <Content Include="Handlers\StaticImageHandler.ashx" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
