--- a/BoxOfficeApp/BoxOfficeApp.csproj
+++ b/BoxOfficeApp/BoxOfficeApp.csproj
@@ -63,6 +63,13 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="ZedGraph, Version=5.1.5.28844, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ZedGraph.dll</HintPath>
+    </Reference>
+    <Reference Include="ZedGraph.Web">
+      <HintPath>..\packages\ZedGraph.Web.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
@@ -70,16 +77,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Data\data.xml" />
     <Content Include="Global.asax" />
+    <Content Include="GraficPage.aspx" />
     <Content Include="GridView.aspx" />
     <Content Include="Web.config" />
     <Content Include="FirstPage.aspx" />
+    <Content Include="ZedGraph.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Models\Movie.cs" />
     <Compile Include="Data\Models\StaticContent.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="GraficPage.aspx.cs">
+      <DependentUpon>GraficPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="GraficPage.aspx.designer.cs">
+      <DependentUpon>GraficPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="GridView.aspx.cs">
       <DependentUpon>GridView.aspx</DependentUpon>
@@ -101,6 +118,13 @@
     </Compile>
     <Compile Include="FirstPage.aspx.designer.cs">
       <DependentUpon>FirstPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ZedGraph.aspx.cs">
+      <DependentUpon>ZedGraph.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ZedGraph.aspx.designer.cs">
+      <DependentUpon>ZedGraph.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
